--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -1,8 +1,9 @@
 .contact_container{
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 2rem;
+    padding: 2rem;
+    height: 75vh;
 }
 
 .text_container{
@@ -23,9 +24,10 @@
 
 .form_container{
  display: flex;
- justify-content: center;
+ justify-content: flex-end;
  align-items: center;
  flex: 2;
+
 
 }
 
@@ -96,6 +98,7 @@ textarea {
          transition: all 0.4s ease-in-out;
 }
 
+
 .line_content_break{
     border: var(--lineSize) solid var(--lineSeperatorColor);
     height: 0.1rem;
@@ -119,6 +122,7 @@ textarea {
     .contact_container{
         flex-direction: column;
         align-items: flex-start;
+
     }
 
     .text_container{
@@ -132,8 +136,9 @@ textarea {
     }
 
     form {
-        width: 30rem;
-        gap: 1.5rem;     
+        width: 100%;
+        gap: 1.5rem;    
+         
     }
 
     textarea{
@@ -147,6 +152,22 @@ textarea {
     .line_content_break{
         height: 0;
         width: 100%;
+    }
+
+}
+
+/* Very small devices (ex -- galaxy fold  */
+@media only screen and (max-width: 340px){
+    .text_container{
+        text-align: center;
+    }
+    .text_contact_info div{
+        text-align: center;
+        width: 100%;
+    }
+    .form_name_email_container{
+
+        flex-direction: column;
     }
 
 }
